--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -1,8 +1,10 @@
 name: Publish Python 🐍 distributions 📦 to PyPI and TestPyPI
 
-on:
-  push:
-    branches: [master]
+on: push
+
+#on:
+  #push:
+    #branches: [master]
 
 jobs:
   build-n-publish:
