--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -2,9 +2,9 @@ name: Publish Python 🐍 distributions 📦 to PyPI and TestPyPI
 
 on: push
 
-#on:
-  #push:
-    #branches: [master]
+  #on:
+#push:
+#branches: [master]
 
 jobs:
   build-n-publish:
@@ -31,6 +31,7 @@ jobs:
               --out-dir dist/
               .
       - name: Publish distribution 📦 to Test PyPI
+        if: endsWith(github.ref, 'master')
         uses: pypa/gh-action-pypi-publish@master
         with:
           password: ${{ secrets.test_pypi_password }}
